--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     implementation project(':InterBus')
 
     api 'com.github:RxBus:1.0.5'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 }
