--- a/build.gradle
+++ b/build.gradle
@@ -3,14 +3,10 @@
 buildscript {
     
     repositories {
-        mavenCentral()
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven {
-            url 'https://maven.google.com/'
-        }
-        maven {
-            url "https://dl.bintray.com/tencentqcloudterminal/maven"
-        }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/gradle-plugin' }
         google()
         jcenter()
     }
@@ -29,14 +25,10 @@ buildscript {
 
 allprojects {
     repositories {
-        mavenCentral()
         maven { url 'http://maven.aliyun.com/nexus/content/groups/public/' }
-        maven {
-            url 'https://maven.google.com/'
-        }
-        maven {
-            url "https://dl.bintray.com/tencentqcloudterminal/maven"
-        }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/jcenter' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/google' }
+        maven { url 'http://maven.aliyun.com/nexus/content/repositories/gradle-plugin' }
         google()
         jcenter()
     }
