取消生成buildConfig文件

--- a/InterBus/build.gradle
+++ b/InterBus/build.gradle
@@ -14,7 +14,7 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
     }
-
+    packageBuildConfig(false)
     buildTypes {
         release {
             minifyEnabled false
